--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
-VITE_REACT_APP_API_BASE_URL=https://odin-facebook-suk0.onrender.com/
-VITE_REACT_APP_WS_BASE_URL=wss://odin-facebook-suk0.onrender.com/cable
+VITE_REACT_APP_API_BASE_URL=https://odin-facebook-wqds.onrender.com
+VITE_REACT_APP_WS_BASE_URL=wss://odin-facebook-wqds.onrender.com/cable
+
+# VITE_REACT_APP_API_BASE_URL=http://localhost:3000/
+# VITE_REACT_APP_WS_BASE_URL=ws://localhost:3000/cable
